removed some dependencies

--- a/package.json
+++ b/package.json
@@ -6,12 +6,62 @@
     "material-ui": "^0.19.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14",
+    "react-tap-event-plugin": "^3.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start-server": "nodemon server.js -w server.js",
+    "start": "npm-run-all -p watch-css start-js start-server",
+    "build": "npm run build-css && react-scripts build",
+    "eject": "react-scripts eject",
+    "lint": "prettier 'src/**/*.js' 'src/components/**/*.js' '*.js' --write --single-quote --no-semi && standard --fix"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "cross-env": "^5.0.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.2",
+    "nightmare": "^2.10.0",
+    "nightmare-upload": "^0.1.1",
+    "node-fetch": "^1.7.1",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.0.2",
+    "prettier": "^1.5.3",
+    "standard": "^10.0.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --single-quote --no-semi",
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "standard": {
+    "globals": [
+      "fetch",
+      "FormData",
+      "describe",
+      "it",
+      "beforeEach",
+      "expect",
+      "handleClose",
+      "state",
+      "handleNext",
+      "handlePrev",
+      "handleChange",
+      "formatLabelToProperty",
+      "handleFilePath",
+      "handleFormData",
+      "handleDialogClose",
+      "componentDidMount",
+      "handleTabChange"
+    ],
+    "parser": "babel-eslint"
   }
 }
